--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,10 +3,6 @@
 @tailwind utilities;
 
 html {
-  width: auto;
-  height: auto;
-  background-color: rgb(255, 255, 255);
-
   font-family: 'Pretendard Variable', Pretendard, -apple-system,
     BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI',
     'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', 'Apple Color Emoji',
@@ -14,7 +10,6 @@ html {
   word-break: keep-all;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
@@ -23,6 +18,22 @@ html::-webkit-scrollbar {
   display: none;
 }
 
+/* 탭 하이라이트 */
+* {
+  -webkit-tap-highlight-color: transparent;
+}
+
+body {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 .box-shadow {
   box-shadow: 0 0 6px rgba(73, 80, 87, 0.05);
+}
+
+.button-shadow {
+  box-shadow: 0 32px 8px rgba(255, 255, 255, 1);
 }
