feat: 공지사항 이미지/파일 첨부 기능

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,11 +13,9 @@ html {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
-
-html::-webkit-scrollbar {
+::-webkit-scrollbar {
   display: none;
 }
-
 /* 탭 하이라이트 */
 * {
   -webkit-tap-highlight-color: transparent;
