--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,10 +22,10 @@ html {
 }
 
 body {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+  -webkit-user-select: text;
+  -moz-user-select: text;
+  -ms-user-select: text;
+  user-select: text;
 }
 
 .box-shadow {
