feat: game 색상 추가

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -39,6 +39,8 @@
 
   /* Game */
   --color-game-primary: #ff507d;
+  --color-game-secondary: #ffe7ed;
+  --color-game-tertiary: #fff9fb;
 }
 
 html {
